tests/fixtures/pass/vec_read_out_of_bounds.sc
use std.vec.Vec

let main(): i32 = {
  let values: Vec(i32) = Vec(i32).new()
  values.read(0)
}
