tests/fixtures/fail/coalesce_infer_result_error_unconstrained.sc
use std.Result

let main(): i32 = { Result.Ok(1) ?? 2 }
